Post knitr results

--- a/PA2_template.html
+++ b/PA2_template.html
@@ -722,29 +722,15 @@ setkey(event.list, search)
 storm.subset &lt;- mutate(storm.subset, search = toupper(EVTYPE))
 setkey(storm.subset, search)
 
+# Match the input data with the NOAA list
 storm.set1 &lt;- left_join(storm.subset, event.list, by = c(&quot;search&quot; = &quot;search&quot;))
 
 # how many are matched with good EVTYPE values?
 records.total &lt;- count(storm.set1)
 records.unmatched &lt;- sum(is.na(storm.set1$event.list))
 records.matched &lt;- sum(!is.na(storm.set1$event.list))
-records.ratio &lt;- round(records.matched / records.total, 3)
-
-# Now create fields for actual property and crop costs
-storm.set1 &lt;- mutate(storm.set1, prop.total = PROPDMG, crop.total = CROPDMG)
-
-# adjust property damage costs based on the PROPGMGEXP
-storm.set1 &lt;- storm.set1 %&gt;%
-        mutate(prop.total = ifelse(PROPDMGEXP == &quot;K&quot;, prop.total * 1000, prop.total)) %&gt;%
-        mutate(prop.total = ifelse(PROPDMGEXP == &quot;M&quot;, prop.total * 1000000, prop.total)) %&gt;%
-        mutate(prop.total = ifelse(PROPDMGEXP == &quot;B&quot;, prop.total * 1000000000, prop.total))
-
-# and do the same for crop damage costs
-storm.set1 &lt;- storm.set1 %&gt;%
-        mutate(crop.total = ifelse(CROPDMGEXP == &quot;K&quot;, crop.total * 1000, crop.total)) %&gt;%
-        mutate(crop.total = ifelse(CROPDMGEXP == &quot;M&quot;, crop.total * 1000000, crop.total)) %&gt;%
-        mutate(crop.total = ifelse(CROPDMGEXP == &quot;B&quot;, crop.total * 1000000000, crop.total))</code></pre>
-<p>There are a total of 254633 records. Of these records, there are 172897 which correctly coded as NOAA’s recognized weather events. This is a ratio of 67.9% good records. The remaining unmatched records represent a significant number of fatalities, injuries, and damage that could change the results of the most dangerous and expensive weather events. In order to keep this miscoding from under-reporting the results, we’ll clean up as much of the data as we can.</p>
+records.ratio &lt;- round(records.matched / records.total, 3)</code></pre>
+<p>There are a total of 254633 records. Of these records, there are 172897 which correctly coded as NOAA’s recognized weather events. This is a ratio of 67.9% that were well coded. The remaining unmatched records represent a significant number of fatalities, injuries, and damage that could change the results of the most dangerous and expensive weather events. In order to keep this miscoding from under-reporting the results, we’ll clean up as much of the data as we can.</p>
 <p>Some of the data records include multiple weather events such as Thunderstorm Wind and Lightning or Heavy Snow and High Wind. In these cases we will categorize the record under the first weather event. In these two examples, the data record would be recorded as Thunderstorm Wind and Heavy Snow respectively and the data would not appear as Lightning or Heavy Snow. This will prevent fatalities, injuries, and damages from appearing multiple times which would skew the total. The second, or third, events listed will be under reported in these cases. Another approach would be to divide the damages evenly between the weather events. However, this proves to be very time consuming for a marginal refinement of the results.</p>
 <pre class="r"><code>#
 ## most of the records were coded with the correct EVTYPE, i.e., the ones in the NOAA weather event list.
@@ -776,16 +762,22 @@ records.unmatched &lt;- sum(is.na(storm.set1$event.list))
 records.matched &lt;- sum(!is.na(storm.set1$event.list))
 records.ratio &lt;- round(records.matched / records.total, 3)</code></pre>
 <p>After cleaning up the data there are still a total of 254633 records of which we now have matched 173167 for a total of 68%.</p>
-<pre class="r"><code>#my.tmp &lt;- grep(&quot;MARINE TSTM WIND&quot;, storm.set1$EVTYPE)
-#storm.set1$search[my.tmp ] &lt;- &quot;MARINE THUNDERSTORM WIND&quot;
-#storm.set1$event.list[my.tmp ] &lt;- &quot;Marine Thunderstorm Wind&quot;
-#
-## but not grep(&quot;TSTM WIND&quot;, storm.set1$EVTYPE)
-#my.tmp &lt;- storm.set1[(is.na(storm.set1$event.list) &amp; storm.set1$EVTYPE == &quot;TSTM WIND&quot;)]
-#
-#
-#sum(is.na(storm.set1$event.list))
-#sum(!is.na(storm.set1$event.list))</code></pre>
+<pre class="r"><code># the input data records property and crop damages in two fields, one for a numerical amount 
+# and another for the magnitude of damages. We'll need to get the actual number for our analysis
+
+# adjust property damage costs based on the PROPGMGEXP
+storm.set1 &lt;- storm.set1 %&gt;%
+        mutate(prop.total = PROPDMG) %&gt;%
+        mutate(prop.total = ifelse(PROPDMGEXP == &quot;K&quot;, prop.total * 1000, prop.total)) %&gt;%
+        mutate(prop.total = ifelse(PROPDMGEXP == &quot;M&quot;, prop.total * 1000000, prop.total)) %&gt;%
+        mutate(prop.total = ifelse(PROPDMGEXP == &quot;B&quot;, prop.total * 1000000000, prop.total))
+
+# and do the same for crop damage costs
+storm.set1 &lt;- storm.set1 %&gt;%
+        mutate(crop.total = CROPDMG) %&gt;%
+        mutate(crop.total = ifelse(CROPDMGEXP == &quot;K&quot;, crop.total * 1000, crop.total)) %&gt;%
+        mutate(crop.total = ifelse(CROPDMGEXP == &quot;M&quot;, crop.total * 1000000, crop.total)) %&gt;%
+        mutate(crop.total = ifelse(CROPDMGEXP == &quot;B&quot;, crop.total * 1000000000, crop.total))</code></pre>
 </div>
 <div id="results" class="section level2">
 <h2>Results</h2>
