--- a/PA2_template.html
+++ b/PA2_template.html
@@ -732,20 +732,17 @@ records.matched &lt;- sum(!is.na(storm.set1$event.list))
 records.ratio &lt;- round(records.matched / records.total, 3)</code></pre>
 <p>There are a total of 254633 records. Of these records, there are 172897 which correctly coded as NOAA’s recognized weather events. This is a ratio of 67.9% that were well coded. The remaining unmatched records represent a significant number of fatalities, injuries, and damage that could change the results of the most dangerous and expensive weather events. In order to keep this miscoding from under-reporting the results, we’ll clean up as much of the data as we can.</p>
 <p>Some of the data records include multiple weather events such as Thunderstorm Wind and Lightning or Heavy Snow and High Wind. In these cases we will categorize the record under the first weather event. In these two examples, the data record would be recorded as Thunderstorm Wind and Heavy Snow respectively and the data would not appear as Lightning or Heavy Snow. This will prevent fatalities, injuries, and damages from appearing multiple times which would skew the total. The second, or third, events listed will be under reported in these cases. Another approach would be to divide the damages evenly between the weather events. However, this proves to be very time consuming for a marginal refinement of the results.</p>
-<pre class="r"><code>#
-## most of the records were coded with the correct EVTYPE, i.e., the ones in the NOAA weather event list.
-## Now we need to clean up as many of the incorrectly coded EVTYPEs
-#storm.set1$search &lt;- ifelse(storm.set1$EVTYPE == &quot;THUNDERSTORM WINDS&quot;, &quot;THUNDERSTORM WIND&quot;, storm.set1$EVTYPE)
-#storm.set1$event.list &lt;- ifelse(storm.set1$EVTYPE == &quot;THUNDERSTORM WINDS&quot;, &quot;Thunderstorm Wind&quot;, 
-#                                ifelse(is.na(storm.set1$EVTYPE), NA, storm.set1$EVTYPE)
-#                                )
-#
-## what's the impact of this matching?
-#records.unmatched &lt;- sum(is.na(storm.set1$event.list))
-#records.matched &lt;- sum(!is.na(storm.set1$event.list))
-#records.ratio &lt;- round(records.matched / records.total, 3)
+<pre class="r"><code># most of the records were coded with the correct EVTYPE, i.e., the ones in the NOAA weather event list.
+# Now we need to clean up as many of the incorrectly coded EVTYPEs
 
 # there are a large number of Thunderstorm Winds that are not coded correctly. 
+is.tstm &lt;- substr(storm.set1$search, 1, 9) == &quot;TSTM WIND&quot;
+storm.set1$event.list[is.tstm] &lt;- c(&quot;Thunderstorm Wind&quot;)
+# some are spelled out but also include plurals or suffixes
+is.tstm &lt;- substr(storm.set1$search, 1, 17) == &quot;THUNDERSTORM WIND&quot;
+storm.set1$event.list[is.tstm] &lt;- c(&quot;Thunderstorm Wind&quot;)
+
+# Marine Thunderstorm Winds are also coded as TSTM
 is.marine &lt;- grep(&quot;MARINE TSTM&quot;, storm.set1$search)
 storm.set1$event.list[is.marine] &lt;- c(&quot;Marine Thunderstorm Wind&quot;)
 
@@ -761,7 +758,7 @@ records.total &lt;- count(storm.set1)
 records.unmatched &lt;- sum(is.na(storm.set1$event.list))
 records.matched &lt;- sum(!is.na(storm.set1$event.list))
 records.ratio &lt;- round(records.matched / records.total, 3)</code></pre>
-<p>After cleaning up the data there are still a total of 254633 records of which we now have matched 173167 for a total of 68%.</p>
+<p>After cleaning up the data there are still a total of 254633 records of which we now have matched 249124 for a total of 97.8%.</p>
 <pre class="r"><code># the input data records property and crop damages in two fields, one for a numerical amount 
 # and another for the magnitude of damages. We'll need to get the actual number for our analysis
 
@@ -797,14 +794,14 @@ setkey(dangerous, rev.sort)
 dangerous[1:47, ]</code></pre>
 <pre><code>##                Weather Event Deaths Injuries Total rev.sort
 ##  1:                  Tornado   5633    91346 96979     3021
-##  2:                       NA   1954    12497 14451    85549
+##  2:        Thunderstorm Wind    709     9458 10167    89833
 ##  3:           Excessive Heat   1903     6525  8428    91572
 ##  4:                    Flood    470     6789  7259    92741
 ##  5:                Lightning    816     5230  6046    93954
-##  6:                     Heat    937     2100  3037    96963
-##  7:              Flash Flood    978     1777  2755    97245
-##  8:                Ice Storm     89     1975  2064    97936
-##  9:        Thunderstorm Wind    133     1488  1621    98379
+##  6:                       NA   1378     4527  5905    94095
+##  7:                     Heat    937     2100  3037    96963
+##  8:              Flash Flood    978     1777  2755    97245
+##  9:                Ice Storm     89     1975  2064    97936
 ## 10:             Winter Storm    206     1321  1527    98473
 ## 11:        Hurricane/Typhoon    135     1333  1468    98532
 ## 12:                High Wind    248     1137  1385    98615
@@ -866,17 +863,17 @@ costs[1:50, ]</code></pre>
 <pre><code>##                Weather Event     Property        Crop        Total
 ##  1:                    Flood 144657709807  5661968450 150319678257
 ##  2:        Hurricane/Typhoon  85336410030  5506117810  90842527840
-##  3:                       NA  71564731542  8950977467  80515709009
+##  3:                       NA  65297945346  8141426525  73439371871
 ##  4:                  Tornado  56925660790   414953270  57340614060
 ##  5:                     Hail  15727367053  3025537890  18752904943
 ##  6:              Flash Flood  16140812067  1421317100  17562129167
 ##  7:                  Drought   1046106000 13972566000  15018672000
-##  8:                Ice Storm   3944927860  5022113500   8967041360
-##  9:           Tropical Storm   7703890550   678346000   8382236550
-## 10:             Winter Storm   6688497251    26944000   6715441251
-## 11:                High Wind   5270046295   638571300   5908617595
-## 12:                 Wildfire   4765114000   295472800   5060586800
-## 13:        Thunderstorm Wind   3483121284   414843050   3897964334
+##  8:        Thunderstorm Wind   9749907481  1224393992  10974301473
+##  9:                Ice Storm   3944927860  5022113500   8967041360
+## 10:           Tropical Storm   7703890550   678346000   8382236550
+## 11:             Winter Storm   6688497251    26944000   6715441251
+## 12:                High Wind   5270046295   638571300   5908617595
+## 13:                 Wildfire   4765114000   295472800   5060586800
 ## 14:               Heavy Rain    694248090   733399800   1427647890
 ## 15:             Frost/Freeze     10480000  1094186000   1104666000
 ## 16:               Heavy Snow    932589142   134653100   1067242242
@@ -918,17 +915,17 @@ costs[1:50, ]</code></pre>
 ##          rev.sort
 ##  1: -150219678257
 ##  2:  -90742527840
-##  3:  -80415709009
+##  3:  -73339371871
 ##  4:  -57240614060
 ##  5:  -18652904943
 ##  6:  -17462129167
 ##  7:  -14918672000
-##  8:   -8867041360
-##  9:   -8282236550
-## 10:   -6615441251
-## 11:   -5808617595
-## 12:   -4960586800
-## 13:   -3797964334
+##  8:  -10874301473
+##  9:   -8867041360
+## 10:   -8282236550
+## 11:   -6615441251
+## 12:   -5808617595
+## 13:   -4960586800
 ## 14:   -1327647890
 ## 15:   -1004666000
 ## 16:    -967242242
